fix(training): monaco editor tooltips not fully visible

--- a/apps/showcase/src/app/app.component.scss
+++ b/apps/showcase/src/app/app.component.scss
@@ -5,7 +5,7 @@ header {
   width: 100%;
   background: var(--df-primary-800);
   box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.15), inset 0 -1px 0 rgba(255,255,255,0.15);
-  z-index: 1021;
+  z-index: var(--o3r-header-zindex);
   display: flex;
   align-items: center;
   justify-content: flex-start;
